assistant_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lep-assistant-service
spec:
  type: NodePort
  selector:
    app: lep-assistant
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 8082
      # Port accessible outside cluster
      nodePort: 30002
 
 
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lep-assistant-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lep-assistant
  template:
    metadata:
      labels:
        app: lep-assistant
    spec:
      containers:
        - name: lep-assistant
          image: derekjan1240/lep-assistant
          ports:
            - containerPort: 8082
