authentication_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lep-authentication-service
spec:
  type: NodePort
  selector:
    app: lep-authentication
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 8081
      # Port accessible outside cluster
      nodePort: 30001
 
 
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lep-authentication-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lep-authentication
  template:
    metadata:
      labels:
        app: lep-authentication
    spec:
      containers:
        - name: lep-authentication
          image: derekjan1240/lep-authentication
          ports:
            - containerPort: 8081
