communication_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lep-communication-service
spec:
  type: NodePort
  selector:
    app: lep-communication
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 8080
      # Port accessible outside cluster
      nodePort: 30000
 
 
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lep-communication-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lep-communication
  template:
    metadata:
      labels:
        app: lep-communication
    spec:
      containers:
        - name: lep-communication
          image: derekjan1240/lep-communication
          ports:
            - containerPort: 8080
