frontend_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lep-frontend-service
spec:
  type: NodePort
  selector:
    app: lep-frontend
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 3000
      # Port accessible outside cluster
      nodePort: 30010
 
 
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lep-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lep-frontend
  template:
    metadata:
      labels:
        app: lep-frontend
    spec:
      containers:
        - name: lep-frontend
          image: derekjan1240/lep-frontend
          ports:
            - containerPort: 3000
